fix alignment

--- a/src/components/Article/Article.css
+++ b/src/components/Article/Article.css
@@ -88,13 +88,13 @@
 			border-radius: 0;
 			flex-shrink: 0;
 			float: none;
+			inset-block-start: var(--content-padding-block);
 			margin: 0;
 			max-block-size: calc(100vh - var(--content-padding-block) * 2);
 			flex-basis: var(--article-nav-width);
 			overflow-y: auto;
 			padding: 0;
 			position: sticky;
-			top: var(--content-padding-block);
 		}
 	}
 }
